<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_directorio">

    <LinearLayout
        android:id="@+id/vlPrincipal"
        android:layout_width="match_parent"
        android:layout_height="436dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_name"
            android:inputType="text"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/vlPicker"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/top"
            android:background="@color/encabezado"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/hlPickerTextos"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSerDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/tv_set_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFechaNacimiento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/tv_fecha_nacimiento"
                    android:textStyle="bold" />
            </LinearLayout>

            <DatePicker
                android:id="@+id/datePicker"
                style="@style/MyDatePickerStyle"
                android:layout_width="300dp"
                android:layout_height="129dp"
                android:layout_gravity="center_horizontal"
                android:theme="@style/MyDatePickerStyle" />

            <LinearLayout
                android:id="@+id/hlPickerBotones"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/datePicker"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/top"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelar"
                    android:layout_width="110sp"
                    android:layout_height="wrap_content"
                    android:text="Cancel" />

                <Button
                    android:id="@+id/btnOk"
                    android:layout_width="110sp"
                    android:layout_height="wrap_content"
                    android:text="Ok" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_phone"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:inputType="phone"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_email"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDescricion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_description"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vlSecundario"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/vlPrincipal"
            android:text="@string/btn_siguiente"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="683dp" />

    </LinearLayout>

</LinearLayout>